@@ -88,7 +88,8 @@
     "timezone": null,
     "currency": "string",
     "hasSolarForecast": true,
-    "simulationMethod": "string"
+    "simulationMethod": "string",
+    "additionalInformation": "string"
   },
   "coordinates":
   {
